--- a/package.json
+++ b/package.json
@@ -33,12 +33,14 @@
     "moment": "^2.30.1",
     "motion": "^12.4.3",
     "next": "^15.1.6",
+    "next-themes": "^0.4.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-firebase-hooks": "^5.1.1",
     "react-hook-speech-to-text": "^0.8.0",
     "react-icons": "^5.4.0",
     "react-webcam": "^7.2.0",
+    "sonner": "^2.0.1",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^11.0.5"
